--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "typescript": "^4.2.4",
