--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.12",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
+    "date-fns": "^2.21.3",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
