--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
