--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
