--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-dropzone": "^11.3.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "styled-components": "^5.3.0",
