--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropzone": "^11.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "styled-components": "^5.3.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.2.5",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
