--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           npm install
           npm run build
+        env: 
+          PUBLIC_URL: github-billing-dashboard
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.3
