--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@types/node": "^12.20.12",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
-    "date-fns": "^2.21.3",
+    "date-fns": "^2.22.1",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropzone": "^11.3.2",
+    "react-medium-image-zoom": "^4.3.4",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "styled-components": "^5.3.0",
