--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
     "@types/node": "^18.11.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "date-fns": "^2.29.3",
-    "papaparse": "^5.3.2",
+    "date-fns": "^2.30.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropzone": "^14.2.3",
-    "react-medium-image-zoom": "^5.1.1",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.1.15",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.8.4",
+    "react-medium-image-zoom": "^5.1.5",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.1.16",
+    "styled-components": "^5.3.10",
+    "typescript": "^4.9.5",
     "web-vitals": "^3.0.4"
   },
   "devDependencies": {
-    "@types/papaparse": "^5.3.5",
+    "@types/papaparse": "^5.3.7",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.25.0",
-    "eslint-plugin-react": "^7.31.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "2.7.1",
+    "lint-staged": "^13.2.2",
+    "prettier": "2.8.8",
     "pretty-quick": "^3.1.3",
     "source-map-js": "^1.0.2"
   },
